# zfs-tools-rs

./: Cargo.toml  LICENSE.txt  README.md  install.sh
.github/workflows/: test.yml
common/: Cargo.toml
common/src/: command_helpers.rs  constants.rs  file_copier.rs  lib.rs  macros.rs  rules.rs  spec_helper.rs  types.rs  zfs_file.rs  zfs_info.rs
zfs-real-usage/: Cargo.toml
zfs-real-usage/src/: main.rs
zfs-remove-snaps/: Cargo.toml
zfs-remove-snaps/src/: main.rs
zfs-remove-snaps/test/resources/: mountpoint_list.txt
zfs-rogue-snaps/: Cargo.toml
zfs-rogue-snaps/src/: main.rs
zfs-snap/: Cargo.toml
zfs-snap/src/: main.rs
zfs-touch-from-snap/: Cargo.toml
zfs-touch-from-snap/src/: main.rs
zp/: Cargo.toml
zp/src/: main.rs
zr/: Cargo.toml
zr/src/: main.rs  types.rs  user_interaction.rs
