[package]
name = "zfs-touch-from-snap"
version = "2.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
camino = "1.1.9"
clap = { version = "4.3", features = ["derive"] }
common = { path = "../common" }
filetime = "0.2"
glob = { version = "0.3" }
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }
