[package]
name = "zr"
version = "2.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
common = { path = "../common" }
colored = "2.1"
regex = "1"
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }
anyhow = "1.0.94"

[dev-dependencies]
tempfile = "3.13"
