[package]
name = "zr"
version = "2.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
camino = "1.1.12"
clap = { version = "4.3", features = ["derive"] }
colored = "3"
common = { path = "../common" }
regex = "1"
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }

[dev-dependencies]
camino-tempfile = "1.4.1"
tempfile = "3.13"
